--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "amqplib": "^0.6.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "4.17.1",
     "tslib": "^2.0.0"
   },
