--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,18 +3,20 @@ version: '2'
 services:
   mongodb:
     image: mongo:latest
-    container_name: mongodb
+    container_name: dev-mongo
+    restart: always
     environment:
-      -  'MONGODB_USER=user'
-      -  'MONGODB_PASS=password!'
-    volumes:
-      - 'mongodb-data:/data/db'
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: webhooks
     ports:
-      - '27017:27017'
-    command: mongod
+      - 27017:27017
+    volumes:
+      - .mongo/:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
   rabbitmq:
     image: 'rabbitmq:3-management'
-    container_name: rabbitmq
+    container_name: dev-rabbitmq
     hostname: 'rabbitmq'
     environment:
       RABBITMQ_ERLANG_COOKIE: 'SWQOKODSQALRPCLNMEQG'
@@ -30,6 +32,3 @@ services:
       #- './enabled_plugins:/etc/rabbitmq/enabled_plugins'
       #- './rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro'
       #- './autocluster-0.4.1.ez:/usr/lib/rabbitmq/lib/rabbitmq_server-3.5.5/plugins/autocluster-0.4.1.ez'
-
-volumes:
-  mongodb-data: {}
