--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "@types/mongodb": "^3.6.3",
     "amqplib": "^0.6.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "4.17.1",
+    "mongodb": "^3.6.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
