--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,9 +15,12 @@ services:
       - .mongo/:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
   rabbitmq:
-    image: 'rabbitmq:3-management'
+#    image: rabbitmq:3.8
+    build:
+      context: .docker/rabbit
+      dockerfile: ./Dockerfile
     container_name: dev-rabbitmq
-    hostname: 'rabbitmq'
+    hostname: rabbitmq
     environment:
       RABBITMQ_ERLANG_COOKIE: 'SWQOKODSQALRPCLNMEQG'
       RABBITMQ_DEFAULT_USER: 'rabbitmq'
@@ -28,7 +31,7 @@ services:
       - '5672:5672'
     labels:
       NAME: 'rabbitmq'
-      #volumes:
+    #volumes:
       #- './enabled_plugins:/etc/rabbitmq/enabled_plugins'
       #- './rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro'
       #- './autocluster-0.4.1.ez:/usr/lib/rabbitmq/lib/rabbitmq_server-3.5.5/plugins/autocluster-0.4.1.ez'
