--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,31 @@
 version: '2'
 
 services:
-  api-gateway:
-    build:
-      context: .
-      dockerfile: apps/api-gateway/Dockerfile
-    container_name: api-gateway
-    ports:
-      - '3333:3333'
-    depends_on:
-      - subscribe-service
-      - webhook-sender
-  subscribe-service:
-    build:
-      context: .
-      dockerfile: apps/subscribe-service/Dockerfile
-    container_name: subscribe-service
-    depends_on:
-      - mongodb
-  webhook-sender:
-    build:
-      context: .
-      dockerfile: apps/webhook-sender/Dockerfile
-    container_name: webhook-sender
-    depends_on:
-      - mongodb
-      - rabbitmq
-  mongodb:
+  monngodb:
     image: mongo:latest
-    container_name: mongodb
+    container_name: mongo
+    hostname: mongo
+    restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: webhooks
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+    ports:
+      - ${MONGO_PORT}:27017
     volumes:
-      - mongodb-data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    command: mongod
+      - .mongo/:/data/db
+      - .docker/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
   rabbitmq:
-    image: 'rabbitmq:3-management'
+    build:
+      context: .docker/rabbit
+      dockerfile: ./Dockerfile
     container_name: rabbitmq
-    hostname: 'rabbitmq'
+    hostname: rabbitmq
     environment:
-      RABBITMQ_ERLANG_COOKIE: 'SWQOKODSQALRPCLNMEQG'
-      RABBITMQ_DEFAULT_USER: 'rabbitmq'
-      RABBITMQ_DEFAULT_PASS: 'rabbitmq'
-      RABBITMQ_DEFAULT_VHOST: '/'
-    labels:
-      NAME: 'rabbitmq'
-      #volumes:
-      #- './enabled_plugins:/etc/rabbitmq/enabled_plugins'
-      #- './rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro'
-      #- './autocluster-0.4.1.ez:/usr/lib/rabbitmq/lib/rabbitmq_server-3.5.5/plugins/autocluster-0.4.1.ez'
-
-volumes:
-  mongodb-data: {}
+      RABBITMQ_ERLANG_COOKIE: ${RABBITMQ_ERLANG_COOKIE}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_DEFAULT_VHOST}
+    ports:
+      - 15672:15672
+      - ${RABBITMQ_PORT}:5672
