--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webhook-demo",
+  "name": "webhook-sender",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -48,7 +48,7 @@
     "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
-    "dotenv": "6.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
