--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "amqplib": "^0.6.0",
     "axios": "^0.21.1",
     "express": "4.17.1",
+    "express-validator": "^6.9.2",
     "mongodb": "^3.6.3",
     "tslib": "^2.0.0"
   },
